--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,17 @@
 name: 'Download and install Boost'
 description: 'Download, install and cache Boost'
 inputs:
-  BOOST_VERSION:
+  boost_version:
     description: 'The boost version to install, e.g. "1.73.0"'
     required: true
+  toolset:
+    description: 'The toolset used to compile boost, e.g. "msvc14.2". May only be used on windows'
+    required: false
+    default: ''
+  platform_version:
+    description: 'The platform version boost was compiled on, e.g. "18.04". May only be used on linux'
+    required: false
+    default: ''
 runs:
   using: 'node12'
   main: 'dist/index.js'
