--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
 name: 'Download and install Boost'
-description: 'Download, install and cache Boost'
+description: 'Download and install Boost'
+author: 'MarkusJx'
 inputs:
   boost_version:
     description: 'The boost version to install, e.g. "1.73.0"'
@@ -12,6 +13,14 @@ inputs:
     description: 'The platform version boost was compiled on, e.g. "18.04". May only be used on linux'
     required: false
     default: ''
+outputs:
+  BOOST_ROOT:
+    description: 'The path to the boost installation, e.g. to be used in CMake'
+  BOOST_VER:
+    description: 'The boost version installed'
 runs:
   using: 'node12'
   main: 'dist/index.js'
+branding:
+  icon: 'activity'
+  color: 'gray-dark'
