--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,5 +28,32 @@ jobs:
         run: ls
         working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
         shell: bash
+      - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
+        shell: bash
+      - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
+        shell: bash
+
+  build:
+    runs-on: ${{ matrix.os }}
+    
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        #os: [windows-latest]
+    
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install boost
+        uses: ./
+        id: install-boost
+        with:
+          boost_version: 1.73.0
+          boost_install_dir: '/home/runner'
+      - name: List contents of boost directory
+        run: ls
+        working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+        shell: bash
+      - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
+        shell: bash
       - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
         shell: bash
