--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "@actions/github": "^4.0.0",
     "request": "^2.88.2",
     "request-progress": "^3.0.0"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.27.0",
+    "typescript": "^4.1.3"
   }
 }
