--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        #os: [windows-latest]
     
     steps:
       - uses: actions/checkout@v2
@@ -33,13 +32,8 @@ jobs:
       - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
         shell: bash
 
-  build-custom-install-dir:
-    runs-on: ${{ matrix.os }}
-    
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        #os: [windows-latest]
+  build-custom-install-dir-ubuntu:
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v2
@@ -49,6 +43,26 @@ jobs:
         with:
           boost_version: 1.73.0
           boost_install_dir: '/home/runner'
+      - name: List contents of boost directory
+        run: ls
+        working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+        shell: bash
+      - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
+        shell: bash
+      - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
+        shell: bash
+
+  build-custom-install-dir-windows:
+    runs-on: windows-latest
+    
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install boost
+        uses: ./
+        id: install-boost
+        with:
+          boost_version: 1.73.0
+          boost_install_dir: 'C:/'
       - name: List contents of boost directory
         run: ls
         working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
