--- a/.github/workflows/test-cmake.yml
+++ b/.github/workflows/test-cmake.yml
@@ -33,6 +33,7 @@ jobs:
       run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build
       env:
         BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+        Boost_LIBRARY_DIRS: ${{ steps.install-boost.outputs.BOOST_ROOT }}/lib
     - name: Build
       working-directory: test/build
       shell: bash
