--- a/.github/workflows/test-cmake.yml
+++ b/.github/workflows/test-cmake.yml
@@ -30,10 +30,9 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: test
-      run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build
+      run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBoost_LIBRARY_DIRS="${{steps.install-boost.outputs.BOOST_ROOT}}/lib" -B build
       env:
         BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-        Boost_LIBRARY_DIRS: ${{ steps.install-boost.outputs.BOOST_ROOT }}/lib
     - name: Build
       working-directory: test/build
       shell: bash
