--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
 set(CMAKE_CXX_STANDARD 17)
 
-find_package(Boost 1.70)
+find_package(Boost 1.70 COMPONENTS thread chrono REQUIRED)
 
 message(STATUS "Boost version: ${Boost_VERSION_STRING}")
 message(STATUS "Boost library directory: ${Boost_LIBRARY_DIRS}")
@@ -16,5 +16,5 @@ add_executable(${PROJECT_NAME} test.cpp)
 target_link_directories(${PROJECT_NAME} PUBLIC ${Boost_LIBRARY_DIRS})
 
 if (NOT WIN32)
-    target_link_libraries(${PROJECT_NAME} PRIVATE dl)
+    target_link_libraries(${PROJECT_NAME} PRIVATE dl pthread ${Boost_LIBRARIES})
 endif ()
