--- a/action.yml
+++ b/action.yml
@@ -6,11 +6,11 @@ inputs:
     description: 'The boost version to install, e.g. "1.73.0"'
     required: true
   toolset:
-    description: 'The toolset used to compile boost, e.g. "msvc14.2". May only be used on windows'
+    description: 'The toolset used to compile boost, e.g. "msvc"'
     required: false
     default: ''
   platform_version:
-    description: 'The platform version boost was compiled on, e.g. "18.04". May only be used on linux'
+    description: 'The platform version boost was compiled on, e.g. "18.04"'
     required: false
     default: ''
   boost_install_dir:
