--- a/.github/workflows/test-cmake.yml
+++ b/.github/workflows/test-cmake.yml
@@ -54,6 +54,7 @@ jobs:
       shell: bash
       working-directory: test
       run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBoost_LIBRARY_DIRS="${{steps.install-boost.outputs.BOOST_ROOT}}/lib" -B build
+      if: ${{matrix.COMPILER != 'mingw'}}
       env:
         BOOST_ROOT: ${{steps.install-boost.outputs.BOOST_ROOT}}
     - name: Build
