--- a/.github/workflows/test-cmake.yml
+++ b/.github/workflows/test-cmake.yml
@@ -17,7 +17,16 @@ jobs:
     
     strategy:
       matrix:
-        os: [ubuntu-18.04, windows-2016]
+        include:
+          - os: ubuntu-20.04
+            COMPILER: gcc
+            PLATFORM: 20.04
+          - os: windows-2019
+            COMPILER: msvc
+            PLATFORM: 2019
+          - os: windows-2019
+            COMPILER: mingw
+            PLATFORM: 2019
 
     steps:
     - uses: actions/checkout@v2
@@ -25,14 +34,29 @@ jobs:
       uses: ./
       id: install-boost
       with:
-        boost_version: 1.73.0
+        boost_version: 1.78.0
+        platform_version: ${{matrix.PLATFORM}}
+        toolset: ${{matrix.COMPILER}}
+
+    - name: Setup MinGW
+      uses: egor-tensin/setup-mingw@v2
+      if: ${{runner.os == 'Windows' && matrix.COMPILER == 'mingw'}}
+
+    - name: Configure CMake mingw
+      shell: bash
+      working-directory: test
+      run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBoost_LIBRARY_DIRS="${{steps.install-boost.outputs.BOOST_ROOT}}/lib" -G "MinGW Makefiles" -B build
+      if: ${{matrix.COMPILER == 'mingw'}}
+      env:
+        BOOST_ROOT: ${{steps.install-boost.outputs.BOOST_ROOT}}
 
     - name: Configure CMake
       shell: bash
       working-directory: test
       run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBoost_LIBRARY_DIRS="${{steps.install-boost.outputs.BOOST_ROOT}}/lib" -B build
+      if: ${{matrix.COMPILER != 'mingw'}}
       env:
-        BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+        BOOST_ROOT: ${{steps.install-boost.outputs.BOOST_ROOT}}
     - name: Build
       working-directory: test/build
       shell: bash
