--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,5 +16,11 @@ add_executable(${PROJECT_NAME} test.cpp)
 target_link_directories(${PROJECT_NAME} PUBLIC ${Boost_LIBRARY_DIRS})
 
 if (NOT WIN32)
+    message(STATUS "Building on linux/macOs")
     target_link_libraries(${PROJECT_NAME} PRIVATE dl pthread ${Boost_LIBRARIES})
+elseif (MSYS OR MINGW)
+    message(STATUS "Building on msys/mingw")
+    target_link_libraries(${PROJECT_NAME} PRIVATE pthread ${Boost_LIBRARIES})
+else ()
+    message(STATUS "Building on windows")
 endif ()
