Update dist files

--- a/.github/workflows/test-cmake.yml
+++ b/.github/workflows/test-cmake.yml
@@ -7,6 +7,12 @@ on:
       - "dist/**"
       - "action.yml"
       - "test/**"
+  pull_request:
+    paths:
+      - ".github/workflows/test-cmake.yml"
+      - "dist/**"
+      - "action.yml"
+      - "test/**"
 
 env:
   BUILD_TYPE: Debug
