--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "install-boost",
-  "version": "2.1.0",
+  "version": "2.3.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,10 +23,12 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "request": "^2.88.2",
-    "request-progress": "^3.0.0"
+    "request-progress": "^3.0.0",
+    "semver": "^7.3.7"
   },
   "devDependencies": {
     "@types/request": "^2.48.7",
+    "@types/semver": "^7.3.10",
     "@vercel/ncc": "^0.27.0",
     "typescript": "^4.1.3"
   }
