--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,7 @@ jobs:
               with:
                   boost_version: 1.73.0
                   boost_install_dir: '/home/runner'
+                  cache: false
             - name: List contents of boost directory
               run: ls
               working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
@@ -69,6 +70,7 @@ jobs:
               with:
                   boost_version: 1.73.0
                   boost_install_dir: 'C:/'
+                  cache: false
             - name: List contents of boost directory
               run: ls
               working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
