--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "semver": "^7.3.7"
     },
     "devDependencies": {
+        "@types/node": "^18.7.14",
         "@types/request": "^2.48.8",
         "@types/semver": "^7.3.12",
         "@vercel/ncc": "^0.34.0",
