Increase required node version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
         "strictPropertyInitialization": true,
         "esModuleInterop": true,
         "lib": ["ESNext", "es2020"],
+        "allowSyntheticDefaultImports": true
     }
 }
