--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,79 +1,81 @@
 name: test
 
 on:
-  workflow_dispatch:
-  push:
-    paths: 
-      - ".github/workflows/test.yml"
-      - "dist/**"
-      - "action.yml"
-  pull_request:
-    paths:
-      - ".github/workflows/test-cmake.yml"
-      - "dist/**"
-      - "action.yml"
-      - "test/**"
+    workflow_dispatch:
+    push:
+        paths:
+            - '.github/workflows/test.yml'
+            - 'dist/**'
+            - 'action.yml'
+    pull_request:
+        paths:
+            - '.github/workflows/test-cmake.yml'
+            - 'dist/**'
+            - 'action.yml'
+            - 'test/**'
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install boost
-        uses: ./
-        id: install-boost
-        with:
-          boost_version: 1.73.0
-      - name: List contents of boost directory
-        run: ls
-        working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-        shell: bash
-      - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
-        shell: bash
-      - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
-        shell: bash
+    build:
+        runs-on: ${{ matrix.os }}
 
-  build-custom-install-dir-ubuntu:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install boost
-        uses: ./
-        id: install-boost
-        with:
-          boost_version: 1.73.0
-          boost_install_dir: '/home/runner'
-      - name: List contents of boost directory
-        run: ls
-        working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-        shell: bash
-      - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
-        shell: bash
-      - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
-        shell: bash
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest]
 
-  build-custom-install-dir-windows:
-    runs-on: windows-latest
-    
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install boost
-        uses: ./
-        id: install-boost
-        with:
-          boost_version: 1.73.0
-          boost_install_dir: 'C:/'
-      - name: List contents of boost directory
-        run: ls
-        working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-        shell: bash
-      - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
-        shell: bash
-      - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
-        shell: bash
+        steps:
+            - uses: actions/checkout@v2
+            - name: Install boost
+              uses: ./
+              id: install-boost
+              with:
+                  boost_version: 1.73.0
+            - name: List contents of boost directory
+              run: ls
+              working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+              shell: bash
+            - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
+              shell: bash
+            - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
+              shell: bash
+
+    build-custom-install-dir-ubuntu:
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v2
+            - name: Install boost
+              uses: ./
+              id: install-boost
+              with:
+                  boost_version: 1.73.0
+                  boost_install_dir: '/home/runner'
+                  cache: false
+            - name: List contents of boost directory
+              run: ls
+              working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+              shell: bash
+            - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
+              shell: bash
+            - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
+              shell: bash
+
+    build-custom-install-dir-windows:
+        runs-on: windows-latest
+
+        steps:
+            - uses: actions/checkout@v2
+            - name: Install boost
+              uses: ./
+              id: install-boost
+              with:
+                  boost_version: 1.73.0
+                  boost_install_dir: 'C:/'
+                  cache: false
+            - name: List contents of boost directory
+              run: ls
+              working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+              shell: bash
+            - run: echo "${{ steps.install-boost.outputs.BOOST_ROOT }}"
+              shell: bash
+            - run: echo "${{ steps.install-boost.outputs.BOOST_VER }}"
+              shell: bash
