fix: get version from package.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "strictPropertyInitialization": true,
         "esModuleInterop": true,
         "lib": ["ESNext", "es2020"],
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true
     }
 }
