--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "install-boost",
-    "version": "2.4.2",
+    "version": "2.4.3",
     "description": "",
     "main": "dist/index.js",
     "private": true,
@@ -30,7 +30,7 @@
     },
     "homepage": "https://github.com/MarkusJx/install-boost#readme",
     "dependencies": {
-        "@actions/cache": "^3.0.6",
+        "@actions/cache": "^3.1.0-beta.1",
         "@actions/core": "^1.10.0",
         "@actions/github": "^5.1.1",
         "request": "^2.88.2",
@@ -38,12 +38,12 @@
         "semver": "^7.3.8"
     },
     "devDependencies": {
-        "@types/node": "^18.11.9",
+        "@types/node": "^18.11.11",
         "@types/request": "^2.48.8",
         "@types/semver": "^7.3.13",
-        "@vercel/ncc": "^0.34.0",
-        "prettier": "^2.7.1",
+        "@vercel/ncc": "^0.36.0",
+        "prettier": "^2.8.1",
         "rimraf": "^3.0.2",
-        "typescript": "^4.8.4"
+        "typescript": "^4.9.3"
     }
 }
