ci: set toolset parameter

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,15 +24,19 @@ jobs:
                 - os: ubuntu-22.04
                   boost_version: '1.80.0'
                   version: 22.04
+                  toolset: 'gcc'
                 - os: ubuntu-22.04
                   boost_version: '1.80.0.beta1'
                   version: 22.04
+                  toolset: 'gcc'
                 - os: windows-2022
                   boost_version: '1.80.0'
                   version: 2022
+                  toolset: 'msvc'
                 - os: windows-2022
                   boost_version: '1.80.0.beta1'
                   version: 2022
+                  toolset: 'msvc'
 
         steps:
             - uses: actions/checkout@v3
@@ -42,6 +46,7 @@ jobs:
               with:
                   boost_version: ${{ matrix.boost_version }}
                   platform_version: ${{matrix.version}}
+                  toolset: ${{matrix.toolset}}
             - name: List contents of boost directory
               run: ls
               working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
@@ -60,9 +65,11 @@ jobs:
               - os: ubuntu-22.04
                 version: 22.04
                 dir: '/home/runner'
+                toolset: 'gcc'
               - os: windows-2022
                 version: 2022
                 dir: 'C:/'
+                toolset: 'msvc'
 
         steps:
             - uses: actions/checkout@v3
@@ -74,6 +81,7 @@ jobs:
                   boost_install_dir: ${{matrix.dir}}
                   cache: false
                   platform_version: ${{matrix.version}}
+                  toolset: ${{matrix.toolset}}
             - name: List contents of boost directory
               run: ls
               working-directory: ${{ steps.install-boost.outputs.BOOST_ROOT }}
