--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "dist/index.js",
     "private": true,
     "scripts": {
-        "pretest": "npm run-script build",
-        "test": "node dist/index.js",
+        "test": "mocha -r ts-node/register test/*.test.ts",
         "build": "ncc build -m -o dist --license licenses.txt src/index.ts",
         "prebuild": "rimraf dist",
         "prettier:fix": "prettier --write ."
@@ -30,20 +29,25 @@
     },
     "homepage": "https://github.com/MarkusJx/install-boost#readme",
     "dependencies": {
-        "@actions/cache": "^3.1.4",
+        "@actions/cache": "^3.2.2",
         "@actions/core": "^1.10.0",
         "@actions/github": "^5.1.1",
         "request": "^2.88.2",
         "request-progress": "^3.0.0",
-        "semver": "^7.3.8"
+        "semver": "^7.5.4"
     },
     "devDependencies": {
-        "@types/node": "^18.11.11",
+        "@types/chai": "^4.3.5",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^20.5.0",
         "@types/request": "^2.48.8",
-        "@types/semver": "^7.3.13",
+        "@types/semver": "^7.5.0",
         "@vercel/ncc": "^0.36.0",
-        "prettier": "^2.8.1",
-        "rimraf": "^4.1.2",
-        "typescript": "^4.9.3"
+        "chai": "^4.3.7",
+        "mocha": "^10.2.0",
+        "prettier": "^3.0.2",
+        "rimraf": "^5.0.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
     }
 }
