--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "esModuleInterop": true,
         "lib": ["ESNext", "es2020"],
         "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "types": ["./src/request-progress.d.ts", "mocha"]
     }
 }
