--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,14 @@ on:
             - 'test/**'
 
 jobs:
-    test:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
-        - name: Install dependencies
-          run: npm ci
-        - name: Run tests
-          run: npm test
+    test-npm:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - name: Install dependencies
+              run: npm ci
+            - name: Run tests
+              run: npm test
 
     build:
         runs-on: ${{ matrix.os }}
