--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,10 @@
+cmake_minimum_required(VERSION 3.14)
 project(test CXX)
-CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
 set(CMAKE_CXX_STANDARD 17)
 
 if (BUILD_ARM_BINARIES)
     message(STATUS "Compiling for ARM64")
-
     set(CMAKE_SYSTEM_PROCESSOR arm)
     set(CROSS aarch64-linux-gnu-)
     set(CMAKE_C_COMPILER ${CROSS}gcc)
@@ -15,7 +14,7 @@ if (BUILD_ARM_BINARIES)
     set(CMAKE_CXX_FLAGS_INIT "-march=armv8-a")
     set(AOM_AS_FLAGS "-march=armv8-a")
     set(CMAKE_SYSTEM_PROCESSOR "arm64")
-endif ()
+endif()
 
 find_package(Boost 1.70 COMPONENTS thread chrono REQUIRED)
 
@@ -30,11 +29,11 @@ add_executable(${PROJECT_NAME} test.cpp)
 target_link_directories(${PROJECT_NAME} PUBLIC ${Boost_LIBRARY_DIRS})
 
 if (NOT WIN32)
-    message(STATUS "Building on linux/macOs")
+    message(STATUS "Building on linux/macOS")
     target_link_libraries(${PROJECT_NAME} PRIVATE dl pthread ${Boost_LIBRARIES})
 elseif (MSYS OR MINGW)
     message(STATUS "Building on msys/mingw")
     target_link_libraries(${PROJECT_NAME} PRIVATE pthread ${Boost_LIBRARIES})
-else ()
+else()
     message(STATUS "Building on windows")
-endif ()
+endif()
