--- a/.github/workflows/run-prettier.yml
+++ b/.github/workflows/run-prettier.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run-prettier:
     runs-on: windows-latest
 
     steps:
@@ -13,6 +13,8 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 9
       
       - name: Setup Node
         uses: actions/setup-node@v4
