--- a/.github/workflows/run-prettier.yml
+++ b/.github/workflows/run-prettier.yml
@@ -23,4 +23,4 @@ jobs:
         run: pnpm install -D
   
       - name: Check formatting with Prettier
-        run: pnpm prettier:check
+        run: pnpm prettier --check
