--- a/.github/workflows/run-prettier.yml
+++ b/.github/workflows/run-prettier.yml
@@ -22,5 +22,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install -D
   
-      - name: Check formatting with Prettier
-        run: pnpm prettier --check
+      - name: Check formatting
+        run: pnpm prettier . --check
+
+      - name: Check formatting
+        run: pnpm prettier . --fix
