--- a/.github/workflows/run-prettier.yml
+++ b/.github/workflows/run-prettier.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   run-prettier:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
