--- a/.github/workflows/run-prettier.yml
+++ b/.github/workflows/run-prettier.yml
@@ -18,4 +18,4 @@ jobs:
         run: npm ci
   
       - name: Fix formatting
-        run: pnpm prettier . --write
+        run: npm prettier . --check
