--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,5 +17,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
   
-      - name: Fix formatting
+      - name: Check formatting
         run: npx prettier . --check
+
+      - name: Fix formatting
+        run: npx prettier . --write
