ci: add windows-2025 and ubuntu 24.04 tests

--- a/.github/workflows/test-cmake.yml
+++ b/.github/workflows/test-cmake.yml
@@ -29,6 +29,11 @@ jobs:
             PLATFORM: 22.04
             ARCH: x86
             cache: false
+          - os: ubuntu-24.04
+            COMPILER: gcc
+            PLATFORM: 24.04
+            ARCH: x86
+            cache: false
           - os: ubuntu-22.04
             COMPILER: gcc
             PLATFORM: 22.04
@@ -39,11 +44,11 @@ jobs:
             PLATFORM: 2022
             ARCH: x86
             cache: false
-          #- os: windows-2022
-          #  COMPILER: mingw
-          #  PLATFORM: 2022
-          #  ARCH: x86
-          #  cache: false
+          - os: windows-2025
+            COMPILER: msvc
+            PLATFORM: 2025
+            ARCH: x86
+            cache: false
           - os: ubuntu-22.04
             COMPILER: gcc
             PLATFORM: 22.04
@@ -59,11 +64,6 @@ jobs:
             PLATFORM: 2022
             ARCH: x86
             cache: true
-          #- os: windows-2022
-          #  COMPILER: mingw
-          #  PLATFORM: 2022
-          #  ARCH: x86
-          #  cache: true
 
     steps:
       - uses: actions/checkout@v3
